--- a/LiteLLM/docker-compose.yml
+++ b/LiteLLM/docker-compose.yml
@@ -13,11 +13,12 @@ services:
       - 'LITELLM_LOG=${LITELLM_LOG:-ERROR}'
       - 'LITELLM_MODE=${LITELLM_MODE:-PRODUCTION}'
       - 'LITELLM_MASTER_KEY=${SERVICE_PASSWORD_MASTERKEY}'
+      - 'LITELLM_SALT_KEY=${LITELLM_SALT_KEY}'
       - 'UI_USERNAME=${SERVICE_USER_UI}'
       - 'UI_PASSWORD=${SERVICE_PASSWORD_UI}'
       - 'DATABASE_URL=${DATABASE_URL}'
-      - 'STORE_MODEL_IN_DB=true'
-      - 'STORE_PROMPTS_IN_SPEND_LOGS=true'
+      - 'STORE_MODEL_IN_DB=${STORE_MODEL_IN_DB:-true}'
+      - STORE_PROMPTS_IN_SPEND_LOGS=true
       - 'REDIS_HOST=${REDIS_HOST:-redis}'
       - 'REDIS_PORT=${REDIS_PORT:-6379}'
       - 'REDIS_PASSWORD=${REDIS_PASSWORD}'
@@ -28,40 +29,7 @@ services:
       - 'VOYAGE_API_KEY=${VOYAGE_API_KEY}'
       - 'VOYAGE_API_BASE=${VOYAGE_API_BASE}'
     volumes:
-      - type: bind
-        source: ./litellm-config.yaml
-        target: /app/config.yaml
-        content: |
-          general_settings:
-            proxy_batch_write_at: 60
-
-          router_settings:
-            redis_host: os.environ/REDIS_HOST
-            redis_port: os.environ/REDIS_PORT
-            redis_password: os.environ/REDIS_PASSWORD
-            enable_pre_call_check: true
-
-          litellm_settings:
-            set_verbose: false
-            json_logs: true
-            log_raw_request_response: true
-            service_callback: ["prometheus_system"]
-            drop_params: true
-            num_retries: 3
-            request_timeout: 600
-            telemetry: false
-            cache: true
-            cache_params:
-              type: redis
-              host: os.environ/REDIS_HOST
-              port: os.environ/REDIS_PORT
-              password: os.environ/REDIS_PASSWORD
-              namespace: "litellm_cache"
-              ttl: 600
-            success_callback:
-              - "prometheus"
-            failure_callback:
-              - "prometheus"
+      - 'litellm-config:/app/config-volume'
     healthcheck:
       test:
         - CMD
@@ -71,14 +39,10 @@ services:
       interval: 5s
       timeout: 5s
       retries: 3
-    command:
-      - '--config'
-      - /app/config.yaml
-      - '--port'
-      - '4000'
-      - '--num_workers'
-      - '8'
-
+    entrypoint:
+      - /bin/sh
+      - '-c'
+      - "cat > /app/config.yaml << 'EOF'\nmodel_list: []\nlitellm_settings:\n  callbacks: [\"prometheus\"]\nEOF\nexec litellm --config /app/config.yaml --port 4000 --num_workers 8\n"
   redis:
     image: 'redis:7-alpine'
     command: 'redis-server --appendonly yes --requirepass ${REDIS_PASSWORD}'
@@ -95,7 +59,6 @@ services:
       interval: 5s
       timeout: 5s
       retries: 3
-
   prometheus:
     image: prom/prometheus
     depends_on:
@@ -104,26 +67,20 @@ services:
     ports:
       - '9090:9090'
     volumes:
-      - prometheus-data:/prometheus
-      - type: bind
+      - 'prometheus-data:/prometheus'
+      -
+        type: bind
         source: ./prometheus.yml
         target: /etc/prometheus/prometheus.yml
-        content: |
-          global:
-            scrape_interval: 15s
-
-          scrape_configs:
-            - job_name: 'litellm'
-              static_configs:
-                - targets: ['litellm:4000']
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
       - '--storage.tsdb.retention.time=15d'
     restart: always
-
 volumes:
   redis-data:
     driver: local
   prometheus-data:
+    driver: local
+  litellm-config:
     driver: local
